--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -4229,7 +4229,7 @@ select {
 /* Responsive Container */
 .section-find-destination {
   background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url("/img/ims service cover photo.jpg") no-repeat center center / cover;
+    url("/img/Choose your Degree.png") no-repeat center center / cover;
   padding: 30px 0;
   display: flex;
   justify-content: center;
